teachers home page

--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.14",
     "@mui/x-data-grid": "^7.1.0",
-    "jwt-decode": "^4.0.0",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.25",
+    "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
