--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-router-dom": "^6.22.3",
     "swiper": "^11.1.0",
     "prop-types": "^15.8.1",
-    "uuid": "^9.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
